--- a/sobreNos/styles.css
+++ b/sobreNos/styles.css
@@ -40,6 +40,10 @@ body, html {
     color: white;
 }
 
+.transparencia {
+    background-color:  rgba(255, 255, 255, 0.438);
+}
+
 .header {
     justify-content: center;
     text-align: center;
