--- a/sobreNos/styles.css
+++ b/sobreNos/styles.css
@@ -8,12 +8,14 @@ body, html {
 .background {
     width: 100%;
     height: 100%;
-    background-image: url('/imagens_telas/back.jpg');
+    background-image: url('/imagens_telas/background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .conteudo {
@@ -27,7 +29,7 @@ body, html {
 }
 
 .card {
-    background-color:  rgba(0, 0, 0, 0.863);
+    background-color:  #ffffffd8;
     border-radius: 0.5rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -37,11 +39,11 @@ body, html {
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .transparencia {
-    background-color:  rgba(0, 0, 0, 0.295);
+    
 }
 
 .header {
