--- a/perfilEditar/styles.css
+++ b/perfilEditar/styles.css
@@ -217,6 +217,7 @@ input[type=number]::-webkit-inner-spin-button {
     font-weight: 300;
     font-style: normal;
     font-size: 0.875rem;
+    flex-direction: row;
 }
 
 .sexo-form legend {
@@ -226,6 +227,12 @@ input[type=number]::-webkit-inner-spin-button {
     font-weight: 300;
     font-style: normal;
     font-size: 0.938rem;
+}
+
+.sexo-form label {
+    display: flex;
+    align-items: center; /* Alinha o texto e o botão de rádio verticalmente */
+    gap: 0.5rem; /* Adiciona um espaço entre o botão e o texto */
 }
 
 input[type="radio"] {
